--- a/compose.yaml
+++ b/compose.yaml
@@ -27,7 +27,7 @@ services:
         image: 'faucet/gauge'
         volumes:
             - ./faucet.yaml:/etc/faucet/faucet.yaml
-            - ./gauge.yaml:/etc/faucet/gauge.yaml
+            - ./faucet/etc/faucet/gauge.yaml:/etc/faucet/gauge.yaml
         ports:
             - 6654:6653
             - 9303:9303
@@ -36,7 +36,7 @@ services:
         image: 'faucet/faucet'
         volumes:
             - ./faucet.yaml:/etc/faucet/faucet.yaml
-            - ./gauge.yaml:/etc/faucet/gauge.yaml
+            - ./faucet/etc/faucet/gauge.yaml:/etc/faucet/gauge.yaml
         ports:
             - 6653:6653
             - 9302:9302
